--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@ padding-top: 5px;
     font-weight: 200px;
     font-size:13px;
     position: fixed;
-    width:100vw;
+    width:100%;
     margin-top: 75px;
 }
 .hero-section1{
@@ -114,9 +114,10 @@ padding-top: 5px;
 .my-form-box{
     height: 470px;
     width: 400px;
+    margin-left: 50px;
     background-color:#ffffff;
-    margin-left: 300px;
-    margin-top: 50px;
+    margin-left: px;
+    margin-top: 100px;
     border-radius: 20px; 
     border: 2px solid grey; 
 }
@@ -472,3 +473,5 @@ td{
     margin-top: 10px;
     box-shadow: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px, rgba(14, 30, 37, 0.32) 0px 2px 16px 0px;
 }
+
+
